--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
+    "@supabase/supabase-js": "^2.39.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
