--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.0",
+    "@supabase/supabase-js": "^2.39.5",
     "next": "14.1.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "openai": "^4.0.0",
-    "@supabase/supabase-js": "^2.39.5"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
