--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.0",
+    "@supabase/auth-helpers-react": "^0.4.5",
     "@supabase/supabase-js": "^2.39.5",
     "next": "14.1.4",
     "openai": "^4.0.0",
